# OneDrive-Merger

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analyze.rs  merge.rs  mod.rs  scan.rs
src-tauri/src/core/: analyzer.rs  hasher.rs  merger.rs  mod.rs  models.rs  scanner.rs
src-tauri/src/utils/: paths.rs
src/components/: ConflictResolver.tsx  FileTable.tsx  FilterBar.tsx  Layout.tsx  ProgressBar.tsx  StatsCards.tsx  StepMerge.tsx  StepReview.tsx  StepScan.tsx  StepSelect.tsx  Stepper.tsx
src/hooks/: useAnalysis.ts  useMerge.ts  useScan.ts
src/stores/: mergeStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: format.ts
