[package]
name = "onedrive-merge"
version = "1.0.0"
description = "OneDrive Smart Merge Tool"
authors = ["Portal ICT"]
edition = "2021"

[lib]
name = "onedrive_merge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
